// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render error common switch 1`] = `
<div>
  <div>
    <div
      class="commonSwitch"
    >
      <label
        class="controlLabel"
        data-testid="common-switch"
      >
        <span
          class=""
        >
          <span
            aria-disabled="false"
            class="error error"
          >
            <span>
              <span />
              <input
                checked=""
                id=""
                type="checkbox"
                value=""
              />
            </span>
          </span>
          <span
            class="errorBar"
          />
        </span>
        <span
          class="error"
        />
      </label>
      
    </div>
  </div>
</div>
`;

exports[`render primary common switch 1`] = `
<div>
  <div>
    <div
      class="commonSwitch"
    >
      <label
        class="controlLabel"
        data-testid="common-switch"
      >
        <span
          class=""
        >
          <span
            aria-disabled="false"
            class=""
          >
            <span>
              <span />
              <input
                id=""
                type="checkbox"
                value="test"
              />
            </span>
          </span>
          <span
            class=""
          />
        </span>
        <span
          class=""
        >
          Primary
        </span>
      </label>
      <p
        class="switchHelperText"
      >
        test switch
      </p>
    </div>
  </div>
</div>
`;
